--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://mdfaishalmansoori655_db_user:ILOSEMYDREAm%4073@graphura.p6ntvmf.mongodb.net/?appName=Graphura
 PORT=8000
+JWT_SECRET=itsgraphuraplacementsystem
